--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-winston": "^4.2.0",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
     "validator": "^13.7.0",
